@@ -22,3 +22,16 @@ j! --java 25 hello.java
 ```sh
 ./xxx.java
 ```
+
+## 文件顶部配置
+
+注意没有空格
+
+```java
+///usr/bin/env jbang "$0" "$@" ; exit $?
+//JAVA 25+
+//DEPS org.projectlombok:lombok:1.18.46
+//DEPS tools.jackson.core:jackson-databind:3.2.1
+//REPOS aliyun=https://maven.aliyun.com/repository/central
+//JAVAC_OPTIONS -proc:full
+```
